--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,7 +31,10 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/client/bin/StompWCIClient",
-            "args": [],
+            "args": [
+                "127.0.0.1",
+                "7777"
+            ],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
