fixed client left. parsing and event and threading for event
fixed client left. parsing and event and threading for event

--- a/client/makefile
+++ b/client/makefile
@@ -1,13 +1,13 @@
 CFLAGS := -c -Wall -Weffc++ -g -std=c++11 -Iinclude
-LDFLAGS := -lboost_system -lpthread
+LDFLAGS := -lboost_system -lpthread -lstdc++
 
 all: EchoClient StompWCIClient
 
 EchoClient: bin/ConnectionHandler.o bin/echoClient.o
 	g++ -o bin/EchoClient bin/ConnectionHandler.o bin/echoClient.o $(LDFLAGS)
 
-StompWCIClient: bin/ConnectionHandler.o bin/StompClient.o bin/event.o
-	g++ -o bin/StompWCIClient bin/ConnectionHandler.o bin/StompClient.o bin/event.o $(LDFLAGS)
+StompWCIClient: bin/ConnectionHandler.o bin/StompClient.o bin/event.o bin/Client.o
+	g++ -o bin/StompWCIClient bin/ConnectionHandler.o bin/StompClient.o bin/event.o bin/Client.o $(LDFLAGS)
 
 bin/ConnectionHandler.o: src/ConnectionHandler.cpp
 	g++ $(CFLAGS) -o bin/ConnectionHandler.o src/ConnectionHandler.cpp
@@ -20,6 +20,9 @@ bin/event.o: src/event.cpp
 
 bin/StompClient.o: src/StompClient.cpp
 	g++ $(CFLAGS) -o bin/StompClient.o src/StompClient.cpp
+
+bin/Client.o: src/Client.cpp
+	g++ $(CFLAGS) -o bin/Client.o src/Client.cpp
 
 .PHONY: clean
 clean:
