made it prettier 🐬
cosmetic and fixed stop server main arguments

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "name": "StompServer",
             "request": "launch",
             "mainClass": "bgu.spl.net.impl.stomp.StompServer",
-            "projectName": "server"
+            "projectName": "server",
+            "args": "7777 reactor"
         },
         {
             "type": "java",
